src/test/compile-fail/fn-bad-block-type.rs
// xfail-stage0
// error-pattern:mismatched types

fn f() -> int { true }

fn main() { }